# stm32-cmake-templete

./: .clangd  CMakeLists.txt  README.md
app/src/: test.c
cmake/: stm32cubemx.cmake  toolchain.cmake  utils.cmake
cmake/stm32cubemx/: CMakeLists.txt
mcu/: Makefile  h750.ioc
mcu/Core/Src/: main.c  stm32h7xx_it.c
